<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#123456"
        android:text="Lenmarc Mall"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textAlignment="center"
        android:gravity="center"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#123456"
        android:text="Surabaya Barat"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="#345"
            android:text="X : 0.1234456789"
            android:textColor="#fff"
            android:textSize="20sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="#345"
            android:text="Y : 0.1234456789"
            android:textColor="#fff"
            android:textSize="20sp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/warnastatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/kritis"
        android:orientation="vertical">
        <TextView
            android:id="@+id/permenkes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/memenuhi"
            android:textStyle="bold"
            android:textColor="@color/pass"
            android:textSize="30sp"
            android:gravity="center"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Status"
                    android:textSize="24sp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dip"
                    />
                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/kritis"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="30dip"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="300dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/counter_text_bg"
            android:stretchColumns="1">
            <TableRow
                android:background="@color/counter_text_color"
                android:padding="5dip"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/bau"
                    android:paddingLeft="30dip"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/bau"
                    android:text="Stinky"
                    android:gravity="right"
                    android:paddingRight="30dip"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:background="@color/counter_text_color"
                android:padding="5dip"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/warna"
                    android:paddingLeft="30dip"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/warna"
                    android:text="Not Colored"
                    android:gravity="right"
                    android:paddingRight="30dip"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:background="@color/counter_text_color"
                android:padding="5dip"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/rasa"
                    android:paddingLeft="30dip"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/rasa"
                    android:text="Not Tasty"
                    android:gravity="right"
                    android:paddingRight="30dip"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:background="@color/counter_text_color"
                android:padding="5dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/dhl"
                    android:paddingLeft="30dip"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dhl"
                    android:text="16.0"
                    android:gravity="right"
                    android:paddingRight="10dip"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/DHL"
                    android:paddingRight="30dp"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow
                android:background="@color/counter_text_color"
                android:padding="5dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/ph"
                    android:paddingLeft="30dip"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/ph"
                    android:text="4.2"
                    android:gravity="right"
                    android:paddingRight="30dip"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:background="@color/counter_text_color"
                android:padding="5dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/tds"
                    android:paddingLeft="30dip"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tds"
                            android:text="36.5"
                            android:gravity="right"
                            android:paddingRight="10dip"
                            android:textSize="24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="@string/TDS"
                            android:paddingRight="30dp"
                            android:textSize="24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow
                android:background="@color/counter_text_color"
                android:padding="5dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/fe"
                    android:paddingLeft="30dip"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/fe"
                            android:text="0.5"
                            android:gravity="right"
                            android:paddingRight="10dip"
                            android:textSize="24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="@string/TDS"
                            android:paddingRight="30dp"
                            android:textSize="24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow
                android:background="@color/counter_text_color"
                android:padding="5dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/no2"
                    android:paddingLeft="30dip"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/no2"
                            android:text="1.5"
                            android:gravity="right"
                            android:paddingRight="10dip"
                            android:textSize="24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="@string/TDS"
                            android:paddingRight="30dp"
                            android:textSize="24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow
                android:background="@color/counter_text_color"
                android:padding="5dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/f"
                    android:paddingLeft="30dip"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/f"
                            android:text="0.01"
                            android:gravity="right"
                            android:paddingRight="10dip"
                            android:textSize="24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="@string/TDS"
                            android:paddingRight="30dp"
                            android:textSize="24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>
                </TableLayout>
            </TableRow>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView"
                android:layout_column="2" />
        </TableLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">
            <Button
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/close"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="24dp"
                android:layout_weight="0.4"
                android:gravity="center"
                android:background="@color/red"/>
            <Button
                android:id="@+id/find"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/find"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="24dp"
                android:layout_weight="0.6"
                android:gravity="center"
                android:background="@color/blue"/>
    </LinearLayout>
</LinearLayout>